--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -23,10 +23,9 @@
 
 .gpt3__header-content p {
   font-family: var(--font-family);
-  font-style: normal;
   font-weight: normal;
   font-size: 20px;
-  line-height: 27px;
+  line-height: 28px;
   color: var(--color-text);
 
   margin-top: 1.5rem;
@@ -37,18 +36,18 @@
   margin: 2rem 0 1rem;
 
   display: flex;
+  flex-direction: row;
 }
 
 .gpt3__header-content__input input {
   flex: 2;
   width: 100%;
   min-height: 50px;
-  background: var(--color-footer);
-  border-radius: 5px 0px 0px 5px;
   font-family: var(--font-family);
+  font-weight: 400;
   font-size: 20px;
-  line-height: 27px;
-  color: #3d6184;
+  line-height: 28px;
+  background: var(--color-footer);
   border: 2px solid var(--color-footer);
   padding: 0 1rem;
   outline: none;
@@ -63,15 +62,15 @@
   width: 100%;
   min-height: 50px;
   font-family: var(--font-family);
-  font-weight: bold;
+  font-weight: 400;
   font-size: 20px;
-  line-height: 27px;
+  line-height: 28px;
   background: #ff4820;
-  color: #ffffff;
+  border: 2px solid #ff4820;
+  padding: 0 1rem;
+  color: #fff;
   cursor: pointer;
   outline: none;
-  padding: 0 1rem;
-  border: none;
 
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
@@ -82,6 +81,8 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  flex-direction: row;
+
   margin-top: 2rem;
 }
 
@@ -91,7 +92,7 @@
 }
 
 .gpt3__header-content__people p {
-  margin: 0, 0, 0, 1rem;
+  margin: 0 0 0 1rem;
   font-family: var(--font-family);
   font-weight: 500;
   font-size: 12px;
@@ -116,7 +117,7 @@
 @media screen and (max-width: 1050px) {
   .gpt3__header {
     flex-direction: column;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
 
   .gpt3__header-content {
@@ -124,17 +125,17 @@
   }
 }
 
-@media screen and (min-width: 650px) {
-  .gpt3__header-content {
+@media screen and (max-width: 650px) {
+  /* .gpt3__header-content {
     margin: 0 0 3rem;
     overflow: hidden;
-  }
+  } */
   .gpt3__header h1 {
     font-size: 48px;
     line-height: 60px;
   }
 
-  .gpt3__header p {
+  .gpt3__header-content p {
     font-size: 16px;
     line-height: 24px;
   }
@@ -154,12 +155,7 @@
   }
 }
 
-@media screen and (min-width: 320px) {
-  .gpt3__header-content {
-    width: 100%;
-    margin: 0 0 3rem;
-    overflow: hidden;
-  }
+@media screen and (max-width: 490px) {
   .gpt3__header h1 {
     font-size: 36px;
     line-height: 48px;
@@ -168,14 +164,6 @@
   .gpt3__header p {
     font-size: 14px;
     line-height: 24px;
-  }
-
-  .gpt3__header-content__people {
-    flex-direction: column;
-  }
-
-  .gpt3__header-content__people p {
-    margin: 0;
   }
 
   .gpt3__header-content__input input,
